Blackpurl/src/objects/CO_Form__c.object
<CustomObject>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Forms</relationshipLabel>
        <relationshipName>CO_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Finance</label>
        <referenceTo>Deal_Finance__c</referenceTo>
        <relationshipLabel>CO Forms</relationshipLabel>
        <relationshipName>CO_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>CO Forms</relationshipLabel>
        <relationshipName>CO_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Edit_Modal_Name__c</fullName>
        <description>If Form is an Editable form, this field will decide which modal to use for data population over that form</description>
        <label>Edit Modal Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW DEAL UNIT</fullName>
                </value>
                <value>
                    <fullName>USED DEAL UNIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Edit_Config__c</fullName>
        <description>JSON config representing X, Y Coordinates for Form</description>
        <label>Form Edit Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>CO Forms</relationshipLabel>
        <relationshipName>CO_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PDF Form is Editable or not</description>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manually_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the form was a pre defined form or was manually uploaded on &quot;Form Repository&quot; screen</description>
        <label>Is Manually Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required_Form__c</fullName>
        <formula>Linked_Form__r.Is_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Required Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Form</label>
        <referenceTo>Linked_Form__c</referenceTo>
        <relationshipLabel>CO Forms</relationshipLabel>
        <relationshipName>CO_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>CO Forms</relationshipLabel>
        <relationshipName>CO_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatically Created</fullName>
                </value>
                <value>
                    <fullName>Manual Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>CO Forms</relationshipLabel>
        <relationshipName>CO_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CO Form</label>
    <nameField>
        <displayFormat>COFRM-{00000000}</displayFormat>
        <label>CO Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>